2005-11-26  Christian Kellner  <gicmo@gnome.org>

	* acinclude.m4:
	* imported/neon/Makefile.am:
	* imported/neon/ne_gnomevfs.c:
	Make neon build again. Part I of the port to
	neon 0.25.

2005-11-24  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* modules/Makefile.am:
	* modules/file-method.c:
	* modules/inotify-helper.c:
	* modules/inotify-helper.h:
	* modules/local_inotify.h:
	* modules/local_inotify_syscalls.h:
	Inotify support, patch from John McCutchan

2005-11-22  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* modules/Makefile.am:
	* module/pty-open.[ch]
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-pty.[ch]:
	Move pty-open to libgnomevfs and add some features

	* modules/sftp-method.c: (sftp_connect):
	Use the new pty-open
	
	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c:
	* libgnomevfs/gnome-vfs-volume-ops.c:
	Implement password asking when mounting.

	Patch from Nate Nielsen

2005-11-22  Alexander Larsson  <alexl@redhat.com>

	* modules/dns-sd-method.c: 
	* libgnomevfs/gnome-vfs-dns-sd.c
	Port to Avahi 0.6
	
	* configure.in: 
	Require avahi 0.6

2005-11-22  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-dns-sd.c:
	Revert accidental removal of avahi code.

2005-11-16  Christian Kellner  <gicmo@gnome.org>

	* programs/gnomevfs-ls.c: Use GNOME_VFS_SIZE_FORMAT_STR in the
	format string and avoid so the cast to glong.

	This should fix bug #314691.

2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== gnome-vfs 2.13.1 ===
	
2005-11-14  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2005-11-14  Federico Mena Quintero  <federico@ximian.com>

	* libgnomevfs/gnome-vfs-xfer.c (gnome_vfs_xfer_delete_items): Turn
	on progress->progress_info->top_level_item.  This will make
	Nautilus know that it must remove the metadata of really-deleted
	files (in nautilus-file-operations.c:sync_transfer_callback():